# mbasicc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  run_tests.sh
.github/workflows/: ci.yml  release.yml
include/mbasic/: ast.hpp  error.hpp  file_handler.hpp  interpreter.hpp  io_handler.hpp  lexer.hpp  parser.hpp  readline.hpp  runtime.hpp  tokens.hpp  value.hpp
man/: mbasicc.1
src/: ast.cpp  console_io.cpp  error.cpp  file_handler.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  readline.cpp  runtime.cpp  tokens.cpp  value.cpp
tests/: test_lexer.cpp
